# jules-mcp

./: .env.test  .gitignore  AGENTS.md  COORDINATION-SUMMARY.md  JULES.md  JULES_API_COMPREHENSIVE.md  JULES_ENHANCED_IMPLEMENTATION_SUMMARY.md  JULES_KNOWLEDGE_BASE.md  README.md  RPS_JULES_INTEGRATION.md  TESTING_GUIDE.md  comyple+Jules+4ever.txt  demo_workflow.py  jules_api_test.py  jules_enhanced_api.py  planning.md  pyproject.toml  rps_example.md  test_actual_capabilities.py  test_enhanced_api.py  test_enhanced_server.py  test_final_validation.py  test_functional.py  test_mcp_protocol.py  test_mcp_server.py  test_mcp_structure.py  test_web_search.py  verify_environment.py
docs/: coordination-patterns.md  multi-ai-workflow.md
examples/: claude-jules-workflow-example.py
src/jules_mcp/: __init__.py  jules_client.py  request_patterns.py  server.py  state.py  utils.py  worker_manager.py
