[project]
name = "jules-mcp"
version = "0.1.0"
description = "MCP server for orchestrating multiple Jules instances"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",           # MCP Python SDK (FastMCP)
    "httpx>=0.27.0",        # Async HTTP client for Jules API
    "pydantic>=2.0.0",      # Data validation and models
    "python-dotenv>=1.0.0", # Environment variable management
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
jules-mcp = "jules_mcp.server:main"
